# efdd

./: .gitignore  README.md  pyproject.toml
evaluation/: access.py  confusion.py  evaluate_refactory.py  example.ipynb  heatmap.py  requirements.txt  run_on_refactory.py  run_on_refactory_functions.py  setup_refactory.py
evaluation/results/: refactory_1.json  refactory_1_functions.json  refactory_2.json  refactory_2_functions.json  refactory_3.json  refactory_3_functions.json  refactory_4.json  refactory_4_functions.json  refactory_5.json  refactory_5_functions.json
src/efdd/: events.py  learning.py  reduce.py  refinement.py
study/: check_status.py  need_investigation.json  requirements.txt  study.py  summary.json
study/events/: report_ansible.json  report_black.json  report_calculator.json  report_cookiecutter.json  report_expression.json  report_fastapi.json  report_httpie.json  report_keras.json  report_luigi.json  report_markup.json  report_matplotlib.json  report_middle.json  report_pysnooper.json  report_sanic.json  report_scrapy.json  report_spacy.json  report_thefuck.json  report_tornado.json  report_tqdm.json  report_youtubedl.json
study/results/: ansible_1.json  ansible_10.json  ansible_11.json  ansible_12.json  ansible_13.json  ansible_14.json  ansible_15.json  ansible_16.json  ansible_17.json  ansible_18.json  ansible_2.json  ansible_3.json  ansible_4.json  ansible_5.json  ansible_6.json  ansible_8.json  ansible_9.json  black_10.json  black_11.json  black_12.json  black_13.json  black_14.json  black_15.json  black_16.json  black_17.json  black_18.json  (+226 more)
(+11 files in other folders)
