[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "effd"
version = "0.0.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" },
]
description = "Oracles from Examples"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "pandas >= 2.2.3",
    "scikit-learn >= 1.6.1",
    "numba >= 0.61.0",
    "shap >= 0.46.0",
    "joblib >= 1.4.2",
    "sflkit >= 0.3.1"
]

[sources]
include = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
]

[tool.black]
line-length = 88
target-version = ['py310']
